--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,11 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
+    <c.gingdev.draggabletext.draggableTextView
             android:id="@+id/draggableText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_centerInParent="true"
             android:rotation="90"
 
@@ -25,4 +26,6 @@
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+
 </RelativeLayout>
